--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ apps/static/assets/.temp
 .idea/
 migrations
 deploy/data/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
